syntax = "proto3";

package client;
option go_package="./pb";

message Empty {}

service client {
    rpc Insert (ClientInfo) returns (InsertResp);
    rpc Delete (DeleteReq) returns (Empty);
    rpc Update (ClientInfo) returns (Empty);
    rpc FindOneById (FindOneByIdReq) returns (ClientInfo);
    rpc FindListByWorkshop (FindListByWorkshopReq) returns (ClientList);
    rpc FindListByEnterprise (FindListByEnterpriseReq) returns (ClientList);
}

message ClientInfo {
    int64  Id           = 1;
    int64  EnterpriseId = 2;
    int64  WorkshopId   = 3;
    string Name         = 4;
    string PhoneNumber  = 5;
    string Email        = 6;
    string Address      = 7;
    string Remark       = 8;
    int64  Version      = 9;
}

message InsertResp {
    int64 Id = 1;
}

message DeleteReq {
    int64 Id = 1;
}

message FindOneByIdReq {
    int64 Id = 1;
}

message FindListByWorkshopReq {
    int64 EnterpriseId = 1;
    int64 WorkshopId   = 2;
    int32 PageSize     = 3;
    int32 PageNumber   = 4;
}

message FindListByEnterpriseReq {
    int64 EnterpriseId = 1;
    int32 PageSize     = 2;
    int32 PageNumber   = 3;
}

message ClientList {
    int64               Count = 1;
    repeated ClientInfo List  = 2;
}